# clink

./: .cirrus.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  AsmParser.cpp  AsmParser.h  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  CPPParser.cpp  CXXParser.cpp  CXXParser.h  Database.cpp  Database.h  FauxTerm.cpp  FauxTerm.h  FileContexts.h  FileQueue.cpp  FileQueue.h  FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  Makefile  Options.h  Parser.h  README.md  README.rst  Resources.h  Symbol.cpp  Symbol.h  TODOs.txt  UI.h  UICurses.cpp  UICurses.h  UILine.cpp  UILine.h  Vim.cpp  Vim.h  (+10 more)
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/03e824c8-7bf5-4a86-b412-3f5cd394fd5c/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/16b841a8-25d6-4de6-8e71-212463c392e6/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/264435e4-cdd3-4577-b69a-ac1ee4f97e97/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/28c6c84d-e8d7-4067-a47a-b0c2b3f9d68b/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/2c38e852-237f-49ef-8a3e-898181bfc411/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/2ca16adc-2071-4a16-9885-012d9f46ab3c/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/3feb7dd8-d556-48cc-b37a-99ad48337a11/: values
.be/53aed54b-8704-45c5-b206-ec416871086a/bugs/46701253-8cb2-42ee-a912-0fba19c73d1b/: values
clink/: CMakeLists.txt
clink/src/: AsmParser.cc  CXXParser.cc  Database.cc  Database.h  Options.cc  Options.h  ParseAsm.cc  ParseAsm.h  ParseC.cc  ParseC.h  Parser.h  ReadFile.cc  ReadFile.h  Resources.h  Symbol.h  Task.h  UI.h  UICurses.cc  UICurses.h  UILine.cc  UILine.h  Vim.cc  Vim.h  WorkItem.cc  WorkItem.h  WorkQueue.cc  WorkQueue.h  WorkQueueStub.h  build.c  build.cc  build.h  clink-repl  clink-repl.1  clink-vim  clink.1  colour.c  colour.h  colours.cc  colours.h  compile_commands.h  (+74 more)
cmake/: FindLIBCLANG.cmake
common/: compiler.h  ctype.h  pipe.h
crewrite/: CMakeLists.txt
crewrite/libclink/: CMakeLists.txt
crewrite/libclink/include/clink/: asm.h  c.h  clink.h  compiler.h  symbol.h
crewrite/libclink/src/: asm.c  asm.cc  asm.h  c.c  compiler.h
libclink/: CMakeLists.txt  clinkConfig.cmake
libclink/include/clink/: Database.h  Error.h  Symbol.h  asm.h  c.h  clang.h  clink.h  cscope.h  db.h  debug.h  def.h  error.h  generic.h  iter.h  parse_asm.h  parse_c.h  python.h  symbol.h  tablegen.h  version.h  vim.h
libclink/src/: Database.cc  Error.cc  Re.cc  Re.h  SQLStatement.cc  SQLStatement.h  TemporaryDirectory.cc  TemporaryDirectory.h  add_line.h  add_symbol.h  arena.h  arena_alloc.c  arena_reset.c  buffer.c  buffer.h  c_keywords.inc  colour.c  colour.cc  colour.h  comp_db.h  comp_db_close.c  comp_db_find.c  comp_db_open.c  compiler_includes.c  db.h  db_add_line.c  db_add_record.c  db_add_symbol.c  db_begin_transaction.c  db_close.c  db_commit_transaction.c  db_find_assignment.c  db_find_call.c  db_find_caller.c  db_find_definition.c  db_find_file.c  db_find_includer.c  db_find_record.c  db_find_symbol.c  db_get_content.c  (+81 more)
misc/: ci.sh
parse-asm/: CMakeLists.txt  main.cc
parse-c/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  aprintf.c  cleanup.c  db_add_line.c  db_add_record.c  db_add_symbol.c  db_add_symbol_no_parent.c  db_find_call.c  db_find_call_regex.c  db_find_caller.c  db_find_caller_regex.c  db_find_definition.c  db_find_definition_regex.c  db_find_definition_regex2.c  db_find_file.c  db_find_includer.c  db_find_includer_regex.c  db_find_includer_stem.c  db_find_record.c  db_find_symbol.c  db_find_symbol_regex.c  db_open.c  db_remove.c  db_remove_empty.c  dirname.c  disppath.c  integration.py  is_root.c  join.c  main.c  mkpath.c  mktempd.c  parse_namefile.c  reject-relative-paths.c  run-echo.c  run-touch.c  test.h  test_asprintf.c  test_mkdtemp.c  test_tmpnam.c
test/cases/: atomic-builtins-2.c  atomic-builtins.c  atomic-crash.c  atomic-noderef.c  atomic-noderef.cc  atomic-noderef2.cc  basic-l.l  basic-td.td  basic-y.y  basic.py  byte-offset.c  comment.c  comment.py  cr.c  cscope-non-main.c  cscope-punctuation.c  cscope-skip-lines.c  db-version.c  def-export.def  define-branch-0.c  define-branch-1.c  define-branch-elif-0.c  define-branch-elif-1.c  define-branch-else-0.c  define-branch-else-1.c  definition-multiplication.c  definition-not-parent.c  definition-rhs.c  empty.c  end-location.c  enum-class.c  find-assignment-clang.c  find-assignment-clang2.c  find-assignment-clang3.c  find-assignment-cscope.c  functions-in-scopes.c  global-qualified.h  global.c  global_const.c  global_const2.c  (+24 more)
test/cases/symlink/: source.c  target.c
test/db_add_line/: CMakeLists.txt  main.c
test/db_add_record/: CMakeLists.txt  main.c
test/db_add_symbol/: CMakeLists.txt  main.c
test/db_add_symbol_no_parent/: CMakeLists.txt  main.c
test/db_find_call/: CMakeLists.txt  main.c
test/db_find_caller/: CMakeLists.txt  main.c
test/db_find_definition/: CMakeLists.txt  main.c
test/db_find_file/: CMakeLists.txt  main.c
test/db_find_includer/: CMakeLists.txt  main.c
test/db_find_includer_stem/: CMakeLists.txt  main.c
test/db_find_record/: CMakeLists.txt  main.c
test/db_find_symbol/: CMakeLists.txt  main.c
test/db_open/: CMakeLists.txt  main.c
test/db_remove/: CMakeLists.txt  main.c
test/db_remove_empty/: CMakeLists.txt  main.c
test/dirname/: CMakeLists.txt  main.c
test/disppath/: CMakeLists.txt  main.c
test/find-me/: CMakeLists.txt  main.c
test/html_colour_to_ansi/: CMakeLists.txt  main.c
test/is_root/: CMakeLists.txt  main.c
test/join/: CMakeLists.txt  main.c
test/libclang-ls/: CMakeLists.txt  main.c
test/ls-includes/: CMakeLists.txt  main.c
test/parse-asm/: CMakeLists.txt  main.c
test/parse-c/: CMakeLists.txt  main.c
test/run-echo/: CMakeLists.txt  main.c
test/run-echo-mask/: CMakeLists.txt  main.c
test/run-touch/: CMakeLists.txt  main.c
test/vim-cat/: main.c
test/vim-open/: CMakeLists.txt  main.c
vim-cat/: CMakeLists.txt  main.c  main.cc
vim-open/: CMakeLists.txt  main.cc
vimcat/: CMakeLists.txt  main.c
(+46 files in other folders)
